Fixed visibility problem

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .funcButton {
-    background-color: #202020;
+    background-color: #404040;
     color: white;
     border: 1px gray solid;
 }
